--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </div>
         </div>
         <div id="card-itens">
+            <img src="imgs/pastel.png" alt="pizza" class="img-itens">
             Pastel: 
             <a id="qtopastel">0</a> 
             <i id="addpastel" style="cursor: pointer;" class="fas fa-plus-circle add"></i>  
@@ -47,6 +48,7 @@
         </div>
         <h2>Comidas</h2>
         <div id="card-itens">
+            <img src="imgs/refrigerante.png" alt="pizza" class="img-itens">
             Refrigerante: 
             <a id="qtorefri">0</a> 
             <i id="addrefri" style="cursor: pointer;" class="fas fa-plus-circle add"></i>  
@@ -54,6 +56,7 @@
             <br>
         </div>
         <div id="card-itens">
+            <img src="imgs/suco.png" alt="pizza" class="img-itens">
             Suco: 
             <a id="qtosuco">0</a> 
             <i id="addsuco" style="cursor: pointer;" class="fas fa-plus-circle add"></i>  
@@ -61,6 +64,7 @@
             <br> 
         </div>
         <div id="card-itens">
+            <img src="imgs/agua.png" alt="pizza" class="img-itens">
             Água: 
             <a id="qtoagua">0</a>
             <i id="addagua" style="cursor: pointer;" class="fas fa-plus-circle add"></i>  
