--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div id="card-itens">
-            <img src="imgs/coxinha.png" alt="pizza" class="img-itens">
+            <img src="imgs/coxinha.png" alt="coxinha" class="img-itens">
             <div id="profile-itens">
                 <h3 class="title-itens">Coxinha</h3>
                 <p class="text-itens">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -40,11 +40,16 @@
             </div>
         </div>
         <div id="card-itens">
-            <img src="imgs/pastel.png" alt="pizza" class="img-itens">
-            Pastel: 
-            <a id="qtopastel">0</a> 
-            <i id="addpastel" style="cursor: pointer;" class="fas fa-plus-circle add"></i>  
-            <i id="delpastel" style="cursor: pointer;" class="fas fa-minus-circle del"></i> 
+            <img src="imgs/pastel.png" alt="pastel" class="img-itens">
+            <div id="profile-itens">
+                <h3 class="title-itens">Pastel</h3>
+                <p class="text-itens">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <a id="qtopastel" class="qto">0</a> 
+            <div id="buttons">
+                <i id="addpastel" style="cursor: pointer;" class="fas fa-plus-circle add"></i>  
+                <i id="delpastel" style="cursor: pointer;" class="fas fa-minus-circle del"></i>
+            </div>
         </div>
         <h2>Comidas</h2>
         <div id="card-itens">
